cambios el header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,25 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">
-            cancha fácil
-            <img class="head-logo" src="/img/Logo.svg" alt="Icono" width="25" height="25">
-        </h1>
+        <div class="contenido">
+            <h1 class="titulo">
+                <div class="left-content">
+                    <img class="head-logo" src="/img/Logo.png" alt="Icono">
+                </div>
+                
+                <div class="right-content">
+                    <a href="tel:+51997653086" class="phone-link">
+                        <span>
+                            <img src="/img/phone.svg" alt="phone" width="25" height="25">
+                            + 51 997 653 086
+                        </span>
+                    </a>
+                    <span>Guía Uso</span>
+
+
+                </div>
+            </h1>
+        </div>
     </header>
 
     <section class="hero">
@@ -32,7 +47,7 @@
                     <p>Reserva canchas en San Martín de Porres,<br>
                           y asegura tu juego pagando desde tu móvil.
                     </p>
-                    <a class="boton-descarga" href="#">DESCARGAR</a>
+                    <a class="boton-descarga" href="/downloads/cancha_facil_1_5.apk">DESCARGAR</a>
                 </div>
                 <img class="imagen-logo" src="/img/appMovil.png" alt="AppMovil" >
 
@@ -69,7 +84,7 @@
         <img src="/img/imagen-celular1.png" alt="Pantalla de inicio" class="celular-izquierdo">
         <div class="contenido-centro">
             <h2>¡EMPIEZA A JUGAR!</h2>
-            <a href="#" class="boton-descarga">DESCARGAR</a>
+            <a href="/downloads/cancha_facil_1_5.apk" class="boton-descarga">DESCARGAR</a>
         </div>
         <img src="/img/imagen-celular2.png" alt="Pantalla de registro" class="celular-derecho">
     </section>
@@ -88,6 +103,7 @@
             </div>
         </div>
     </footer>
-    
+   
 </body>
+
 </html>
